# clip-dr

./: .gitignore  EDITING.md  FEATURES.md  ISSUES.md  METRICS.md  MULTI-RECORD.md  NICHE-KNACK-APP-DEVELOPMENT-CONTRACT.md  NOTICE  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/: CLAUDE.md  settings.local.json
_shared/: NOTICE.template
_shared/ai-engine/: NOTICE  pyproject.toml
_shared/ai-engine/src/: cache.py  job_registry.py  model_manager.py
_shared/ai-engine/src/handlers/: embeddings.py  nsfw.py  ocr.py  whisper.py
_shared/desktop-runtime/: NOTICE  package.json
_shared/desktop-runtime/src/: cache-manager.ts  crash-recovery.ts  index.ts
_shared/tauri-app-template/: NOTICE  README.md  package.json  tsconfig.json  vite.config.ts
_shared/tauri-app-template/scripts/: build-windows.sh  dev.sh
_shared/tauri-app-template/src/: index.html  main.ts  styles.css
_shared/tauri-app-template/src-tauri/: Cargo.toml
_shared/tauri-app-template/src-tauri/src/commands/: engine.rs  settings.rs
_shared/tauri-app-template/src-tauri/src/engine/: client.rs
ai-engine/: README.md  requirements.txt
ai-engine/src/: __init__.py  __main__.py  model_manager.py  server.py
ai-engine/src/handlers/: __init__.py
audio-doctor-scrubs/: PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
audio-doctor-scrubs/src/: App.vue  main.ts
audio-doctor-scrubs/src-tauri/: Cargo.toml  tauri.conf.json
audio-doctor-scrubs/src-tauri/capabilities/: default.json
audio-doctor-scrubs/src-tauri/src/: main.rs
audio-doctor-scrubs/src-tauri/src/audio_clean/: filters.rs  neural.rs  spectral.rs
audio-doctor-scrubs/src-tauri/src/commands/: audio.rs  clean.rs  export.rs  mod.rs  transcribe.rs  vad.rs
audio-doctor-scrubs/src/composables/: useAudio.ts  useClipping.ts  (+3 more)
by-metes-and-bounds/: main.js
desktop-runtime/: README.md  package.json  tsconfig.json
desktop-runtime/src/: engine-client.ts  job-manager.ts  stream-handler.ts  types.ts
docs/: EDL_CONTRACTS.md  silence-detection-word-timing.md
packaging/: VM-SETUP.md
packaging/arch/: PKGBUILD
packaging/flatpak/: com.nicheknack.clip-doctor-scrubs.dev.yml  com.nicheknack.clip-doctor-scrubs.metainfo.xml  com.nicheknack.clip-dr.desktop  com.nicheknack.clip-dr.dev.yml  com.nicheknack.clip-dr.metainfo.xml  com.nicheknack.clip-dr.yml
packaging/rpm/: clip-doctor-scrubs.spec  clip-dr.spec
packaging/scripts/: build-aur.sh  build-flatpak-dev.sh  build-rpm.sh  generate-flatpak-sources.sh
project-scrubs-clip-dr/: package.json  vite.config.ts
project-scrubs-clip-dr/.claude/: settings.local.json
project-scrubs-clip-dr/packaging/: VM-SETUP.md
project-scrubs-clip-dr/scripts/: copy-to-releases.sh
project-scrubs-clip-dr/src-tauri/: Cargo.toml  tauri.conf.json
project-scrubs-clip-dr/src-tauri/capabilities/: default.json
project-scrubs-clip-dr/src-tauri/src/: main.rs
project-scrubs-clip-dr/src-tauri/src/audio_clean/: expander.rs  neural.rs  pipeline.rs
project-scrubs-clip-dr/src-tauri/src/commands/: audio.rs  export.rs  mod.rs  recording.rs  streaming_transcribe.rs  transcribe.rs  waveform.rs
releases/: README.md  build-all.sh
releases/update-server/: generate-manifest.sh  releases.json
scripts/: copy-to-releases.sh  prepare-models.sh  recover-wav.py
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  transcription_princess-bride.wav.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/: .gitkeep
src-tauri/src/: audio_util.rs  main.rs
src-tauri/src/audio_clean/: dynamics.rs  mod.rs  neural.rs  pipeline.rs  spectral.rs
src-tauri/src/commands/: audio.rs  clean.rs  export.rs  import.rs  metadata.rs  mod.rs  moonshine.rs  playback.rs  project.rs  pulse_devices.rs  recording.rs  transcribe.rs  vad.rs  waveform.rs
src-tauri/src/commands/recording/: backend.rs  cpal_backend.rs  diagnostics.rs  error.rs  mod.rs  pulse_backend.rs  ring_buffer.rs  system_audio.rs  types.rs  wav_writer.rs
src-tauri/src/services/: path_service.rs
src/__tests__/: channel-lanes.test.ts  clean-playback.test.ts  clipboard-concurrency.test.ts  concurrency-guards.test.ts  cross-track-drag.test.ts  edge-trim-ui.test.ts  edge-trim.test.ts  editing-workflow.test.ts  export-edl.test.ts  export-silence.test.ts  export-trim.test.ts  history-batches.test.ts  import-reactivity.test.ts  level-meter.test.ts  marker-sync.test.ts  multi-selection.test.ts  paste-edl.test.ts  per-track-silence.test.ts  per-track-transcription.test.ts  performance.test.ts  phase3-data-integrity.test.ts  playback-bugs.test.ts  project-persistence.test.ts  project-v3.test.ts  recording-errors.test.ts  recording-monitor.test.ts  recording-placement.test.ts  recording-store.test.ts  setup.ts  shared-utils.test.ts  silence-cut-edl.test.ts  snap-visualization.test.ts  sync-epoch.test.ts  sync-hardening.test.ts  time-ruler.test.ts  timeline-coordinates.test.ts  timing-precision.test.ts  transcription-remap.test.ts  transcription-slider.test.ts  volume-reactivity.test.ts  (+2 more)
src/composables/: useAudio.ts  useBackgroundTranscription.ts  useClipping.ts  useCompositeWaveform.ts  useEffectiveAudio.ts  useFrameSync.ts  usePlayback.ts  useSearch.ts  useSelection.ts  useTimelineViewport.ts  useTimemarkInteraction.ts  useWaveform.ts
src/services/: debug-logger.ts  keyboard-shortcuts.ts  track-render.ts  waveform-extractor.ts
src/shared/: audio-utils.ts  constants.ts  fs-utils.ts  timeline-coordinates.ts  types.ts  utils.ts
src/stores/: audio.ts  cleaning.ts  clipboard.ts  export.ts  history.ts  meter.ts  playback.ts  project.ts  recording.ts  selection.ts  settings.ts  silence.ts  tracks.ts  transcription.ts  ui.ts  vad.ts
src/views/: EditorView.vue  SettingsView.vue
src/workers/: audio-processing-api.ts  audio-processing.worker.ts
tauri-app-template/: package.json
tauri-app-template/scripts/: build-linux.sh  build-macos.sh
tauri-app-template/src-tauri/: Cargo.toml  tauri.conf.json
(+137 files in other folders)
