[package]
name = "clip-dr"
version = "0.12.11"
description = "Audio cleaning and clip-making application"
authors = ["Niche-Knack Apps"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "vorbis", "wav"] }
rubato = "0.14"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
whisper-rs = "0.13"
biquad = "0.4"
nnnoiseless = "0.5"
realfft = "3.4"

# MP3 encoding
mp3lame-encoder = "0.1"

# OGG Vorbis encoding (vendored libvorbis/libogg)
vorbis_rs = "0.5"

# Peak cache + WAV mmap
memmap2 = "0.9"

# Audio I/O for recording
cpal = "0.15"
lazy_static = "1.4"
chrono = "0.4"

# Windows-specific loopback capture
[target.'cfg(windows)'.dependencies]
wasapi = "0.13"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"
