[package]
name = "clip-doctor-scrubs"
version = "0.1.0"
description = "Audio cleaning and clip-making application"
authors = ["Niche-Knack Apps"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav"] }
rubato = "0.14"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
whisper-rs = "0.13"
dirs = "5"
biquad = "0.4"
nnnoiseless = "0.5"
realfft = "3.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
