[package]
name = "niche-knack-app"
version = "1.0.0"
description = "A Niche-Knack Desktop Application"
authors = ["Niche-Knack"]
license = "Apache-2.0"
repository = ""
default-run = "niche-knack-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
